# breadx-keysym

./: Cargo.toml  Justfile  README.md
.github/workflows/: CI.yml
breadx-keysyms/: Cargo.toml
breadx-keysyms/src/: automatically_generated.rs  lib.rs
keysym-generator/: Cargo.toml  README.md
keysym-generator/src/: main.rs
