[package]
name = "breadx-keysyms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
breadx = { path = "../../breadx/breadx", default-features = false }

[features]
default = []
async = ["breadx/async"]