#               Copyright John Nunley, 2022.
# Distributed under the Boost Software License, Version 1.0.
#       (See accompanying file LICENSE or copy at
#         https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "breadx-keysyms"
version = "0.1.1"
edition = "2018"
license = "BSL-1.0"
repository = "https://github.com/bread-graphics/breadx-keysym"
homepage = "https://github.com/bread-graphics/breadx-keysym#readme"
description = "A breadx library for mapping keycodes to keysyms."
readme = "../README.md"
authors = ["notgull <jtnunley01@gmail.com>"]

[dependencies]
breadx = { version = "3", default-features = false }

[features]
default = []
async = ["breadx/async"]

[package.metadata.docs.rs]
all-features = true